--- a/Keras入門.ipynb
+++ b/Keras入門.ipynb
@@ -1548,8 +1548,17 @@
    "source": [
     "## kerasのModelの可視化\n",
     "TensorboardやGraphvizによってモデルを可視化できる  \n",
-    "導入: Macなら  \n",
+    "導入\n",
+    "\n",
+    "Macなら  \n",
     "% brew install graphviz  \n",
+    "\n",
+    "Windowsなら\n",
+    "https://graphviz.gitlab.io/download/  \n",
+    "からGraphvizのStableインストーラをダウンロードしてインストール  \n",
+    "Graphvizx.y/binへパスを通し，cmdを再起動\n",
+    "\n",
+    "共通  \n",
     "% pip install pydot"
    ]
   },
@@ -1641,7 +1650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
