(2)だいたい完了

--- a/今さら聞けないGAN(2) DCGAN.ipynb
+++ b/今さら聞けないGAN(2) DCGAN.ipynb
@@ -34,7 +34,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 実装テクニック\n"
+    "## 実装テクニック\n",
+    "\n",
+    "### プーリングをやめる\n",
+    "CNNでは最大プーリングを使ってダウンサンプリングするのが一般的だが，discriminatorではこれをストライド2の畳み込みに置き換える．  \n",
+    "\n",
+    "Generatorの方では，fractionally-strided convolutionまたはtransposed convolution, 同名があるのであまり使われないが，deconvolutionとも呼ばれる方法をとっている．  \n",
+    "\n",
+    "### 全結合層をなくす\n",
+    "CNNでは最後の方の層は全結合層になっていることがよくあるが，discriminatorからこれを取り除き，global average poolingに置き換える．  \n",
+    "特徴マップごとの平均を取り，そのベクトルをSoftmaxする．  \n",
+    "全結合層では通常ドロップアウトを使って過学習を防ぐが，global average poolingではパラメータがなくなるため，過学習を防ぐ．  \n",
+    "安定性はますが，収束は遅くなると言われている．  \n",
+    "\n",
+    "### Batch Normalizationを使う\n",
+    "generatorでもdiscriminatorでもつかう．  \n",
+    "各層のデータ分布を正規化してやることにより学習を早くしたり，パラメータの初期化をそれほど気にしなくてよくなり，過学習を防ぐ効果もある．  \n",
+    "全ての層に適用すると不安定になってしまうらしいので，generatorの出力層，discriminatorの入力層以外で使う．  \n",
+    "\n",
+    "### Leaky ReLUを使う\n",
+    "Generatorでは出力層にTanhを使うが，それ以外の層ではReLUを使う．  \n",
+    "Discriminatorでは全ての層でLeaky ReLUを使う  \n",
+    "x<=0の領域を0にするのではなく，axにすることで，勾配を0にしない．  \n",
+    "これにより，勾配消失問題を防げる．  \n",
+    "このaも含めて学習してしまうPReLUの方が良いと思うかもしれないが，PReLUは過学習を起こしてしまうリスクがあるらしい．  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "余談  \n",
+    "CNNを使ったGANで最初に高解像度画像の生成に成功したのはLAPGANだと言われているが，何段にも分けて画像を生成する必要があった．  \n",
+    "DCGANは一発で高解像度画像を生成することに成功している．"
    ]
   },
   {
@@ -77,10 +109,11 @@
     "        model = Sequential()\n",
     "        model.add(Dense(1024, input_shape=noise_shape))\n",
     "        model.add(BatchNormalization())\n",
-    "        model.add(Activation('relu', name='relu1'))\n",
+    "        model.add(Activation('relu', name='relu1')) # 基本的にReLU\n",
     "        model.add(Dense(128*7*7))\n",
     "        model.add(BatchNormalization())\n",
     "        model.add(Activation('relu', name='relu2'))\n",
+    "        # アップサンプリング\n",
     "        model.add(Reshape((7, 7, 128), input_shape=(128*7*7, )))\n",
     "        model.add(UpSampling2D((2, 2)))\n",
     "        model.add(Convolution2D(64, 5, 5, border_mode='same'))\n",
@@ -88,7 +121,7 @@
     "        model.add(Activation('relu', name='relu3'))\n",
     "        model.add(UpSampling2D((2,2)))\n",
     "        model.add(Convolution2D(1, 5, 5, border_mode='same'))\n",
-    "        model.add(Activation('tanh', name=\"tanh\"))\n",
+    "        model.add(Activation('tanh', name=\"tanh\"))  # 出力だけTanh\n",
     "        model.summary()\n",
     "        return model\n",
     "    \n",
@@ -99,14 +132,20 @@
     "        model.add(Convolution2D(64, 5, 5, subsample=(2, 2), \\\n",
     "                           border_mode='same', input_shape=img_shape))\n",
     "        model.add(LeakyReLU(0.2))\n",
+    "        \n",
+    "        # Poolingの代わりにsubsample(2,2)としてストライド2の畳み込みによってダウンサンプリング\n",
     "        model.add(Convolution2D(128, 5, 5, subsample=(2, 2)))\n",
     "        model.add(LeakyReLU(0.2))\n",
     "        model.add(Flatten())\n",
+    "        \n",
+    "        # 層が深い場合にはglobal average poolingの方が良いらしいが，こいつは浅いのでそのままにする\n",
     "        model.add(Dense(256))\n",
     "        model.add(LeakyReLU(0.2))\n",
     "        model.add(Dropout(0.5))\n",
     "        model.add(Dense(1))\n",
     "        model.add(Activation('sigmoid', name=\"sigmoid\"))\n",
+    "        \n",
+    "        # batch normalizationを入れてしまうとdiscriminatorgが強くなりすぎてしまう\n",
     "        model.summary()    \n",
     "        return model"
    ]
@@ -824,6 +863,13 @@
    "source": [
     "初回3000エポック目にして結構いい感じの画像を出力してくれた．"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "基本構造を押さえておけば，派生系はパーツを書き換えるだけでOKなのだ．"
+   ]
   }
  ],
  "metadata": {
@@ -842,7 +888,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
