--- a/今さら聞けないGAN(2) DCGAN.ipynb
+++ b/今さら聞けないGAN(2) DCGAN.ipynb
@@ -41,11 +41,29 @@
     "\n",
     "Generatorの方では，fractionally-strided convolutionまたはtransposed convolution, 同名があるのであまり使われないが，deconvolutionとも呼ばれる方法をとっている．  \n",
     "\n",
+    "#### Upsampling と Deconvolution(AutoEncoder)\n",
+    "https://qiita.com/MuAuan/items/69dda8bd4013007d7b18\n",
+    "Generatorがやっていることは隠れベクトルの画像化を行うニューロンの学習．  \n",
+    "すなわちAutoEncoder．  \n",
+    "Conv2DTransposeは畳み込みの逆．フィルタをピクセルに与え，フィルタサイズに拡大．\n",
+    "UpSampling2Dはたとえば2 * 2の画像の各ピクセルを(2,2)で複製して4 * 4の画像にする．  \n",
+    "Conv2DTransposeとUpSamplingで比較すると，UpSamplingの方が綺麗  \n",
+    "https://keras.io/ja/layers/convolutional/\n",
+    "\n",
+    "\n",
     "### 全結合層をなくす\n",
     "CNNでは最後の方の層は全結合層になっていることがよくあるが，discriminatorからこれを取り除き，global average poolingに置き換える．  \n",
     "特徴マップごとの平均を取り，そのベクトルをSoftmaxする．  \n",
     "全結合層では通常ドロップアウトを使って過学習を防ぐが，global average poolingではパラメータがなくなるため，過学習を防ぐ．  \n",
     "安定性はますが，収束は遅くなると言われている．  \n",
+    "\n",
+    "#### Global Average Pooling(GAP)\n",
+    "https://qiita.com/mine820/items/1e49bca6d215ce88594a  \n",
+    "例えば，CNNで7 * 7 * 512(画像がバッチ数だけ)のデータを1 * 1 * 4096次元のデータに圧縮したいとする．  \n",
+    "このとき，25,088×4,096=102,760,448の重みパラメータが存在する．  \n",
+    "多すぎる．  \n",
+    "GAPは各画像の画素の平均値(1ピクセルに49個の値)を出力ベクトルの要素とすることで，出力の次元を512に削減することができる．  \n",
+    "このことがモデルを簡潔にし，高速化と過学習の抑制に効果的である．\n",
     "\n",
     "### Batch Normalizationを使う\n",
     "generatorでもdiscriminatorでもつかう．  \n",
