--- a/今さら聞けないGAN(3) モード崩壊について.ipynb
+++ b/今さら聞けないGAN(3) モード崩壊について.ipynb
@@ -9,6 +9,76 @@
     "\n",
     "潜在変数と生成画像について，つまり多分大体モード崩壊について"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 生成モデル\n",
+    "生成モデル$P_{gen}$は各ピクセル値が任意の値をとる同時確率分布を求めること．  \n",
+    "$$ P_{gen} = p(x_1, x_2, x_3, ... x_{784}) $$\n",
+    "確率密度分布が分かれば，それに基づいてデータを人工的に生成できる．  \n",
+    "\n",
+    "例えばサイコロなら，\n",
+    "$$ P(x) = 1/6 \\ where \\ (x = {1,2,3,4,5,6}) $$\n",
+    "という確率密度分布になっている．  \n",
+    "このような生成モデルが決定されたら，確率密度分布から$x$の値をサンプリングすることができる．確率分布に従ってサイコロを振ることに等しい．  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GANの生成モデル\n",
+    "この$P(x)$をニューラルネットワークで近似してやろうというのがGANのGenerator  \n",
+    "潜在変数$z$が与えられた時に，$z$の条件付き確率分布$G(x|z)$(⬅︎QiitaのほうはDになっているけどGだよね？)を求める．  \n",
+    "この求めた確率分布からサンプリングを行うことで$x$つまり画像を生成する．  \n",
+    "  \n",
+    "generatorは潜在変数から画像データの確率密度分布を出力するのではない  \n",
+    "generatorは画像データそのものを出力する  \n",
+    "本来確率分布からサンプリングする時には，その分布に従った揺らぎを持って確率論的に値を生成する．(確率をそのまま画像にするから？)  \n",
+    "しかし，generatorの場合は同じ$z$からは常に決定論的に同じ値が出力される．  \n",
+    "\n",
+    "この$z$を連続的に空間上で移動させれば，2~3のような画像も連続的な変化がみられる．\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 潜在変数の次元 \n",
+    "画像データに対して何次元の潜在変数が必要か？  \n",
+    "データの次元(784)も必要はない  \n",
+    "25個の変化しない潜在変数ベクトルを与えて学習させてみる．  \n",
+    "- zdim = 100: 綺麗な画像が出力される\n",
+    "- zdim = 50: 画像の質は落ちていないが，epochが進むごとに数字が変わってしまう．また，同じ画像が多いような気がする\n",
+    "- zdim = 10: 画像きれい\n",
+    "- zdim = 2: zdim=50でみられた現象がより顕著に現れている\n",
+    "- zdim=1: zdim=2と同じ．だがここまでくると訓練データを模倣してしまっているようにも思える．  \n",
+    "  \n",
+    "ここで起きている問題は**モード崩壊**(mode collapse)と呼ばれる現象．  \n",
+    "generatorの学習に失敗し，訓練データの分布全体を表現できずに，訓練データの最頻値(mode)のみを学習してしまっている．イメージとしては，全国民の期待に応える能力がなく，とりあえず多数派のための政策を作る，みたいなイメージ  \n",
+    "  \n",
+    "zdim=2,1の時は戦時変数の次元が不十分で，訓練データの分布を表現しきれず，特定の画像に集中(1とか)することで，discriminatorを騙すようにしてきた  \n",
+    "  \n",
+    "zdim=50の時には，discriminatorの学習係数のバランスが適切ではなかったためmode collapseが発生してしまっていた．このようにzdimが単純な線形で変化しないのが，パラメータチューニングが難しい一因とも思われる．  \n",
+    "  \n",
+    "99000iteration後に10000サンプル生成させた時の各数字を別のCNNで識別させ，それぞれのzdimでどの数字がいくつ生成されたのかをヒストグラムにしてみると，モード崩壊を起こしていたzdimでは生成される数字が偏ってしまっていることがわかる．  \n",
+    "  \n",
+    "さて，生成データを見ずに学習時の損失関数から学習がうまくいっているかを判断したい．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## まとめ\n",
+    "dcganで高精細な画像を生成することに成功しても，モード崩壊により望む出力を得られない問題がわかった．  \n",
+    "生成結果を確認せずに学習が成功しているかを判断し，モード崩壊をさせない方法が必要． \n",
+    "  \n",
+    "というわけで，WassersteinGANに次回はトライしてみる．"
+   ]
   }
  ],
  "metadata": {
